--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@
 
 # Visual Studio cache directory
 .vs/
+.vscode/
+.DS_Store
 
 # Gradle cache directory
 .gradle/
@@ -97,3 +99,5 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+Thumbs.db
